--- a/.github/workflows/deploy-on-dispatch.yml
+++ b/.github/workflows/deploy-on-dispatch.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: production
+    environment: development
 
     steps:
       - name: Checkout
@@ -28,7 +28,7 @@ jobs:
 
       - name: Set working dir and image
         run: |
-          echo "TF_WORKING_DIR=./terraform/environments/production" >> $GITHUB_ENV
+          echo "TF_WORKING_DIR=./terraform/environments/development" >> $GITHUB_ENV
           echo "FRONTEND_IMAGE=${{ github.event.client_payload.image }}" >> $GITHUB_ENV
 
       - name: Terraform Init
